# rafx

./: .gitignore  README.md
.github/workflows/: ci.yml
assets/shaders/: mesh.frag.shader
demo/: Cargo.toml  SSAO-TODO.md  ssao.material  ssao.patch
demo/assets/materials/: skybox.material  ssao.material
demo/assets/shaders/: bloom_blur.frag.cookedshaderpackage  bloom_combine.frag.cookedshaderpackage  bloom_extract.frag.cookedshaderpackage  depth.frag.cookedshaderpackage  depth.vert.cookedshaderpackage  (+12 more)
demo/shaders/: compile.bat  compile_shaders.bat  compile_shaders.sh  ssao.frag  ssao_textures.glsl  ssao_uniform.glsl
demo/shaders/src/: lib.rs  (+7 more)
demo/src/: components.rs  daemon.rs  daemon_args.rs  demo_plugin.rs  game_asset_lookup.rs  game_asset_manager.rs  init.rs  legion_support.rs  lib.rs  main.rs  render_contexts.rs  test_scene.rs
rafx/: Cargo.toml
rafx-api/: Cargo.toml
rafx-api/src/: buffer.rs  command_buffer.rs  command_pool.rs  descriptor_set_array.rs  device_context.rs  lib.rs  queue.rs  reflection.rs  render_target.rs  root_signature.rs
rafx-assets/: Cargo.toml
rafx-assets/src/: image_upload.rs  image_utils.rs
rafx-base/src/: resource_ref_map.rs
rafx-nodes/src/: lib.rs  render_views.rs
rafx-renderer/: Cargo.toml
rafx-renderer/src/: lib.rs  render_frame_job.rs  renderer.rs  renderer_builder.rs  swapchain_handling.rs
rafx-resources/: Cargo.toml
rafx-shader-processor/src/: codegen.rs  cook.rs  lib.rs  reflect.rs
rafx-shell-vulkan/: Cargo.toml
rafx-shell-vulkan/src/: image.rs
rafx/src/: lib.rs
shader-processor/src/: codegen.rs
(+176 files in other folders)
